# wechat-pay-rust-sdk

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/home/disburden/.target/: .rustc_info.json
example/src/: main.rs
home/disburden/.target/: .rustc_info.json
src/: async_pay.rs  error.rs  lib.rs  macros.rs  model.rs  pay.rs  pay_type.rs  request.rs  response.rs  sign.rs  sync_pay.rs  util.rs
src/async_impl/: pay.rs
src/blocking/: mod.rs  pay.rs
