[package]
name = "wechat-pay-rust-sdk"
version = "0.2.7"
edition = "2021"
authors = ["lake"]
description = "微信支付 © Wechat Pay SDK Official (标准库)"
repository = "https://github.com/dounine/wechat-pay-rust-sdk"
license = "MIT"
keywords = ["wechat", "pay", "weixin", "wechatpay", "weixinpay"]
exclude = ["example"]

[workspace]
members = ["example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
base64 = "0.21.6"
chrono = "0.4.31"
rsa = { version = "0.9.6", features = ["sha2"] }
aes-gcm = "0.10.3"
md5 = "0.7.0"
reqwest = { version = "0.11.23", features = ["json"] }
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.0"

[features]
default = []
blocking = ["reqwest/blocking"]
async = []

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.35.1", features = ["full"] }