[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
dotenvy = "0.15.7"
wechat-pay-rust-sdk = { path = "..", features = ["blocking", "debug-print"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.111"